[package]
name = "celer-pay-module"
version = "0.6.0"
auhros = ["Celer"]
edition = "2018"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"node-primitives/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-timestamp/std",
]

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.node-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'node-primitives'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.pallet-balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev =  '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev =  '7e9a2ae78d27cc56e053fbec3b34a1a258b89561'
version = '2.0.0-alpha.8'
