[package]
name = "celer-pay-module"
version = "0.8.0"
auhros = ["Celer"]
edition = "2018"

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"node-primitives/std",
	"serde",
	"sp-std/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.frame-support]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.frame-system]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
package = 'frame-system'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
optional = true
default-features = false
package = 'frame-benchmarking'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.node-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'node-primitives'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
default_features = false
package = 'pallet-balances'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-std]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.pallet-timestamp]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
package = 'pallet-timestamp'
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.8'
version = '2.0.0-alpha.8'
