[package]
authors = ['Celer']
build = 'build.rs'
edition = '2018'
name = 'celer-network'
repository = 'https://github.com/celer-network/cChannel-substrate/'
version = '0.8.8'
license = "MIT"
description = "Substrate Node which is integrated celer-pay-module"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.8.0", features = ["wasmtime"] }
sp-core = { version = "2.0.0" }
sc-executor = { version = "0.8.0", features = ["wasmtime"] }
sc-service = { version = "0.8.0", features = ["wasmtime"] }
sp-inherents = { version = "2.0.0" }
sc-transaction-pool = { version = "2.0.0" }
sp-transaction-pool = { version = "2.0.0" }
sc-consensus-aura = { version = "0.8.0" }
sp-consensus-aura = { version = "0.8.0" }
sp-consensus = { version = "0.8.0" }
sc-consensus = { version = "0.8.0" }
sc-finality-grandpa = { version = "0.8.0" }
sp-finality-grandpa = { version = "2.0.0" }
sc-client-api = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.0.0"
sc-rpc = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
sc-rpc-api = { version = "0.8.0" }
sp-blockchain = { version = "2.0.0" }
sp-block-builder = { version = "2.0.0" }
sc-basic-authorship = { version = "0.8.0" }
substrate-frame-rpc-system = { version = "2.0.0" }
pallet-transaction-payment-rpc = { version = "2.0.0" }
celer-pay-module-rpc = { version = "0.8.8", path = "../pallets/celer-pay/rpc" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "2.0.0" }
frame-benchmarking-cli = { version = "2.0.0" }

celer-runtime = { version = "0.8.8", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "2.0.0" }

[[bin]]
name = 'celer-network'
