[package]
authors = ['Celer']
edition = '2018'
name = 'celer-runtime'
repository = 'https://github.com/celer-network/cChannel-substrate'
version = '0.8.8'
license = "MIT"
description = "Configure of substrate runtime modules"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-executive = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
pallet-aura = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }
pallet-grandpa = { version = "2.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0", default-features = false }
pallet-sudo = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-timestamp = { version = "2.0.0", default-features = false }
pallet-transaction-payment = { version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0", default-features = false }
sp-block-builder = { version = "2.0.0", default-features = false }
sp-consensus-aura= { version = "0.8.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-inherents = { version = "2.0.0", default-features = false }
sp-offchain = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-session = { version = "2.0.0", default-features = false }
sp-transaction-pool = { version = "2.0.0", default-features = false }
sp-version = { version = "2.0.0", default-features = false }
celer-pay-module = { path = "../pallets/celer-pay", default-features = false }
runtime-module-condition-caller = { path = "../pallets/condition-caller", default-features = false }
mock-boolean-condition = { path = "../pallets/mock-boolean-condition", default-features = false }
mock-numeric-condition = { path = "../pallets/mock-numeric-condition", default-features = false }
celer-contracts = { path = "../pallets/celer-contracts", version = "0.8.8", default-features = false }
celer-contracts-primitives = { path = "../pallets/celer-contracts/common", version = "0.8.8", default-features = false }

# Used for rpc
frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false }
celer-pay-module-rpc-runtime-api = { path = "../pallets/celer-pay/rpc/runtime-api", default-features = false }
celer-contracts-rpc-runtime-api = { path = "../pallets/celer-contracts/rpc/runtime-api", version = "0.8.8", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
frame-system-benchmarking = { version = "2.0.0", default-features = false, optional = true }
hex-literal = { version = "0.3.1", optional = true }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"celer-pay-module/std",
	"runtime-module-condition-caller/std",
    "mock-boolean-condition/std",
    "mock-numeric-condition/std",
	"celer-contracts/std",
	"celer-contracts-primitives/std",
	"celer-contracts-rpc-runtime-api/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
