[package]
name = "celer-pay-module"
version = "0.8.6"
authors = ["Celer"]
edition = "2018"

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"node-primitives/std",
	"serde",
	"sp-std/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"mock-numeric-condition/std",
]

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.frame-support]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.frame-system]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
package = 'frame-system'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.node-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'node-primitives'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
default_features = false
package = 'pallet-balances'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-std]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.pallet-timestamp]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
package = 'pallet-timestamp'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.mock-numeric-condition]
default-features = false
path = '../mock-numeric-condition'
package = 'mock-numeric-condition'
version = '0.8.6'

[dev-dependencies.mock-boolean-condition]
default_features = false
path = '../mock-boolean-condition'
package = 'mock-boolean-condition'
version = '0.8.6'
