[package]
name = "celer-pay-module"
version = "0.8.9"
authors = ["Celer"]
edition = "2018"
license = "MIT"
repository = "https://github.com/celer-network/cChannel-substrate"
description = "Celer Pay On-chain runtime module"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"], default-features = false }
serde = { version = "1.0.106", features = ["derive"], optional = true }

sp-io = { version = "2.0.0", default_features = false }
sp-core = { version = "2.0.0", default_features = false }
sp-std = { version = "2.0.0", default_features = false }
sp-runtime = { version = "2.0.0", default_features = false }
frame-support = { version = "2.0.0", default_features = false }
frame-system = { version = "2.0.0", default_features = false }
pallet-balances = { version = "2.0.0", default_features = false }
pallet-timestamp = { version = "2.0.0", default_features = false }
runtime-module-condition-caller = { path = "../condition-caller", version = "0.8.9", default_features = false }
celer-pay-module-rpc-runtime-api = { path = "./rpc/runtime-api", version = "0.8.9", default_features = false }
celer-contracts = { path = "../celer-contracts", version = "0.8.8", default_features = false }

[dev-dependencies]
pallet-randomness-collective-flip = { version = "2.0.0", default_features = false }
mock-numeric-condition = { path = "../mock-numeric-condition", version = "0.8.9", default_features = false }
mock-boolean-condition = { path = "../mock-boolean-condition", version = "0.8.9", default_features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-io/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"runtime-module-condition-caller/std",
	"celer-pay-module-rpc-runtime-api/std",
	"celer-contracts/std",
]