[package]
authors = ['Celer']
edition = '2018'
name = 'mock-numeric-condition'
version = '0.8.9'
license = "MIT"
repository = "https://github.com/celer-network/cChannel-substrate"
description = "Mock numeric condition runtime module"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0", default_features = false }
frame-system = { version = "2.0.0", default_features = false }
sp-runtime = { version = "2.0.0", default_features = false }
sp-std = { version = "2.0.0", default_features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]
