[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'
[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dependencies.celer-pay]
default-features = false
path = '../../celer-pay'
package = 'celer-pay-module'
version = '0.8.3'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'

[dependencies.sp-std]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-rc3'
version = '2.0.0-rc3'


[package]
authors = ['Celer']
description = 'FRAME pallet template'
edition = '2018'
license = 'MIT license'
name = 'multi-sesion-app'
version = '0.8.3'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'celer-pay/std',
]
