[package]
name = "celer-contracts-primitives"
version = "0.8.8"
authors = ["Celer"]
edition = "2018"
license = "MIT"
repository = "https://github.com/celer-network/cChannel-substrate"
description = "A crate that hosts a common definitions that are relevant for the celer-contracts."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# This crate should not rely on any of the frame primitives.
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
]
