[package]
name = "celer-pay-rpc"
version = "0.1.0"
authors = ['Celer']
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1" }
jsonrpc-core = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
serde = { version = "1.0.101", features = ["derive"], optional = true }

sp-rpc = { version = '2.0.0-rc3', default-features = false}
sp-runtime = { version = '2.0.0-rc3', default-features = false}
sp-blockchain = { version = '2.0.0-rc3', default-features = false}
sp-api = { version = '2.0.0-rc3', default-features = false }

celer-pay-module-runtime-api = {version = "0.1.0", path = "../runtime-api", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "sp-runtime/std",
  "sp-api/std",
  "celer-pay-module-runtime-api/std"
]