[package]
name = "celer-pay-module-rpc"
version = "0.8.9"
authors = ['Celer']
edition = "2018"
license = "MIT"
repository = "https://github.com/celer-network/cChannel-substrate"
description = "Node-specific RPC methods for interaction with contracts"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
sp-blockchain = { version = "2.0.0" }
sp-std = { version = "2.0.0" }
sp-core = { version = "2.0.0" }
sp-rpc = { version = "2.0.0" }
serde = { version = "1.0.101", features = ["derive"] }
sp-runtime = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
celer-pay-module-rpc-runtime-api = { version = "0.8.9", path = "./runtime-api" }

[dev-dependencies]
serde_json = "1.0.41"
