[package]
name = "celer-pay-module-runtime-api"
version = "0.1.0"
authors = ["Celer"]
edition = "2018"

[dependencies]
sp-api = { version = "2.0.0-rc3", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-rc3", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
	"sp-std/std",
]