[package]
name = "celer-contracts-rpc-runtime-api"
version = "0.8.8"
authors = ["Celer"]
edition = "2018"
license = "MIT"
repository = "https://github.com/celer-network/cChannel-substrate"
description = "Runtime API definition required by Contracts RPC extensions."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "2.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
celer-contracts-primitives = { version = "0.8.8", default-features = false, path = "../../common" }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"celer-contracts-primitives/std",
]
