[package]
name = "celer-pay-module-rpc-runtime-api"
version = "0.8.8"
authors = ["Celer"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.106", features = ["derive"], optional = true }
sp-api = { version = "2.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"sp-api/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
]
